# nanobot-todoist-skill

./: .env.example  .gitignore  GITHUB_SETUP.md  README.md  SKILL.md  nanobot-todoist.example.json  nanobot-todoist.example.yaml  pyproject.toml  requirements.txt  run.py  test_skill.py
references/: setup.md
src/todoist_mcp/: __init__.py  __main__.py  server.py
